[gd_scene load_steps=15 format=3 uid="uid://bim30unr2v26j"]

[ext_resource type="Script" uid="uid://ca1sdbfi0jhgo" path="res://scenes/spike_head/spike_head.gd" id="1_2td07"]
[ext_resource type="Texture2D" uid="uid://cb61h3phmhmtn" path="res://assets/Traps/Spike Head/Blink (54x52).png" id="1_bbri4"]
[ext_resource type="Texture2D" uid="uid://cflcqmujtlmii" path="res://assets/Traps/Spike Head/Bottom Hit (54x52).png" id="2_sxlwr"]
[ext_resource type="Texture2D" uid="uid://cm08r3avqd641" path="res://assets/Traps/Spike Head/Idle.png" id="3_g0qga"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ugdo0"]
atlas = ExtResource("1_bbri4")
region = Rect2(0, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhpi7"]
atlas = ExtResource("1_bbri4")
region = Rect2(54, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_7i316"]
atlas = ExtResource("1_bbri4")
region = Rect2(108, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhjh7"]
atlas = ExtResource("1_bbri4")
region = Rect2(162, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6g3o"]
atlas = ExtResource("2_sxlwr")
region = Rect2(0, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx3bp"]
atlas = ExtResource("2_sxlwr")
region = Rect2(54, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_376r3"]
atlas = ExtResource("2_sxlwr")
region = Rect2(108, 0, 54, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7dix"]
atlas = ExtResource("2_sxlwr")
region = Rect2(162, 0, 54, 52)

[sub_resource type="SpriteFrames" id="SpriteFrames_egfi8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugdo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhpi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7i316")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhjh7")
}],
"loop": false,
"name": &"blink",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6g3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx3bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_376r3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7dix")
}],
"loop": false,
"name": &"hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_g0qga")
}],
"loop": false,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0876g"]
size = Vector2(37, 36)

[node name="SpikeHead" type="Node2D"]
script = ExtResource("1_2td07")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Area2D"]
sprite_frames = SubResource("SpriteFrames_egfi8")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_0876g")

[node name="PlayerDetector" type="RayCast2D" parent="Area2D"]
target_position = Vector2(0, 100)
collision_mask = 2
collide_with_areas = true
collide_with_bodies = false

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
